@@ -13,6 +13,14 @@
   <name>AssertJ Core Tests</name>
 
   <properties>
+    <argLine>
+      -Dfile.encoding=${project.build.sourceEncoding}
+      -Dnet.bytebuddy.experimental=true
+      --add-opens=java.base/java.lang=ALL-UNNAMED
+      --add-opens=java.base/java.math=ALL-UNNAMED
+      --add-opens=java.base/java.util=ALL-UNNAMED
+      --add-opens=java.base/sun.nio.fs=ALL-UNNAMED
+    </argLine>
     <rootDirectory>${project.basedir}/../../../</rootDirectory>
     <spotless.skip>false</spotless.skip>
   </properties>
@@ -32,7 +40,7 @@
     <dependency>
       <groupId>nl.jqno.equalsverifier</groupId>
       <artifactId>equalsverifier</artifactId>
-      <version>3.16.2</version>
+      <version>3.17</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -67,6 +75,12 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.17.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
